    - topojson, https://github.com/topojson/topojson

* Leaflet.label (https://github.com/Leaflet/Leaflet.labelExtension)

    - `L.Label` has been adopted within Leaflet.js to `L.Tooltip`
    - Tooltips are now displayed with default Leaflet.js styling
    - In custom javascript extensions, change all  `*.bindLabel()` to `*.bindTooltip()`

BUG FIXES AND FEATURES

* Fix bug where icons where anchored to the top-center, not center-center (2a60751)

* Fix bug where markers would not appear in self contained knitr files (cc79bc3)

* leaflet-label plugin now L.tooltip in leaflet.js.  labelOptions() now translates old options clickable to interactive and noHide to permanent.

* Fix a bug where the default `addTiles()` would not work with .html files
  served directly from the filesystem.

* Add `groupOptions` function. Currently the only option is letting you specify
  zoom levels at which a group should be visible.

* Fix bug with accessing columns in formulas when the data source is a Crosstalk
  SharedData object wrapping a spatial data frame or sf object.

* Fix strange wrapping behavior for legend, especially common for Chrome when
  browser zoom level is not 100%.

* Fix incorrect opacity on NA entry in legend. (PR #425)

* Added support for drag events (#405)

* Ensure type safety of .indexOf(stamp) (#396)

* `validateCoords()` warns on invalid polygon data (#393)

* Added `method` argument to `addRasterImage()` to enable nearest neighbor interpolation when projecting categorical rasters (#462)

* Added an `'auto'` method for `addRasterImage()`. Projected factor results are coerced into factors. (9accc7e)

* Added `data` parameter to remaining `addXXX()` methods, including addLegend. (f273edd, #491, #485)

leaflet 1.1.0
--------------------------------------------------------------------------------

* Add support for sf. sf, sfc, and sfg classes are supported with POINT,
  LINESTRING, MULTILINESTRING, POLYGON, and MULTIPOLYGON geometries (note